# asakusafw-m3bp

./: .gitignore  .gitmodules  NOTICE  README.md  pom.xml
bridge/: pom.xml
bridge/assembly/: .gitattributes  pom.xml
bridge/assembly/src/main/assembly/: bootstrap.xml  native-dependencies.xml
bridge/bootstrap/: pom.xml
bridge/bootstrap/src/main/java/com/asakusafw/m3bp/bootstrap/: M3bpBootstrap.java  package-info.java
bridge/client/: pom.xml
bridge/client/src/conf/spotbugs/: exclude.xml
bridge/client/src/main/java/com/asakusafw/m3bp/client/: Capability.java  Constants.java  GraphExecutor.java  Launcher.java  M3bpDirect.java  M3bpLauncher.java  NativeLibraryHolder.java  package-info.java
bridge/client/src/test/java/com/asakusafw/m3bp/client/: LauncherTest.java  M3bpLauncherTest.java
bridge/client/src/test/native/: CMakeLists.txt
bridge/client/src/test/native/Launcher/: CMakeLists.txt  comparators.cpp
bridge/client/src/test/native/M3bpLauncher/: CMakeLists.txt  comparators.cpp
bridge/custom/: pom.xml
bridge/custom/src/main/java/com/asakusafw/m3bp/custom/: M3bpBatchContext.java  M3bpCustomSupportExtension.java  package-info.java
bridge/mock/: pom.xml
bridge/mock/src/test/native/: CMakeLists.txt
bridge/mock/src/test/native/NativeFunctionLoader/: CMakeLists.txt  jna.cpp
bridge/runtime/: mac_post_compile.sh  pom.xml
bridge/runtime/src/conf/findbugs/: exclude.xml
bridge/runtime/src/main/assembly/: native.xml
bridge/runtime/src/main/include/: adapter.hpp  env.hpp  jniutil.hpp  mirror.hpp  util.hpp
bridge/runtime/src/main/java/com/asakusafw/m3bp/bridge/: KeyValueReaderBridge.java  KeyValueWriterBridge.java  ValueReaderBridge.java  ValueWriterBridge.java  VertexProcessorBridge.java  package-info.java
bridge/runtime/src/main/java/com/asakusafw/m3bp/descriptor/: Descriptors.java  M3bpEdgeDescriptor.java  M3bpVertexDescriptor.java  package-info.java
bridge/runtime/src/main/java/com/asakusafw/m3bp/mirror/: ConfigurationMirror.java  EngineMirror.java  FlowGraphDriver.java  FlowGraphMirror.java  Identifier.java  InputReaderMirror.java  Movement.java  OutputWriterMirror.java  PageDataInput.java  PageDataOutput.java  PortMirror.java  TaskMirror.java  VertexMirror.java  package-info.java
bridge/runtime/src/main/native/: CMakeLists.txt
bridge/runtime/src/main/native/adapter/: ProcessorAdapter.cpp  ThreadObserverAdapter.cpp
bridge/runtime/src/main/native/jni/: ConfigurationMirrorImpl.cpp  EngineMirrorImpl.cpp  FlowGraphMirrorImpl.cpp  InputReaderMirrorImpl.cpp  InputReaderMirrorUnsafe.cpp  NativeBufferUtil.cpp  OutputWriterMirrorImpl.cpp  OutputWriterMirrorUnsafe.cpp  TaskMirrorImpl.cpp  VertexMirrorImpl.cpp  env.cpp  jniutil.cpp
bridge/runtime/src/main/native/mirror/: EngineMirror.cpp  FlowGraphMirror.cpp  InputReaderMirror.cpp  OutputWriterMirror.cpp  PortMirror.cpp  TaskMirror.cpp  VertexMirror.cpp
bridge/runtime/src/test/java/com/asakusafw/m3bp/bridge/: IntKeyValueSerDe.java  IntSerDe.java  KeyValueReaderBridgeTest.java  KeyValueWriterBridgeTest.java  ValueReaderBridgeTest.java  ValueWriterBridgeTest.java  VertexProcessorBridgeTest.java
bridge/runtime/src/test/java/com/asakusafw/m3bp/mirror/: EdgeIoProvider.java  MockInputReaderMirror.java  MockOutputWriterMirror.java  MockPageDataInput.java  MockPageDataOutput.java  MockTaskMirror.java
bridge/runtime/src/test/native/: CMakeLists.txt
bridge/runtime/src/test/native/comparator/: comparators.cpp
bridge/workaround/hadoop/: pom.xml
compiler/: pom.xml
compiler/codegen/: pom.xml
compiler/common/: pom.xml
compiler/comparator/: pom.xml
compiler/comparator/src/test/native/: CMakeLists.txt
compiler/comparator/src/test/native/serde/: CMakeLists.txt  jna.cpp
compiler/core/: .gitignore  pom.xml
compiler/directio/: pom.xml
compiler/inspection/: pom.xml
compiler/internalio/: pom.xml
compiler/test-adapter/: pom.xml
compiler/tester/: pom.xml
compiler/windgate/: pom.xml
docs/: README.md
docs/ja/source/: changelogs.rst  conf.py  index.rst  optimization.rst  reference.rst  release-notes.rst  user-guide.rst
docs/ja/source/attachment/: build-system-hadoop.gradle  build.gradle
gradle/: build.gradle  settings.gradle
gradle/.buildtools/: gradlew.properties
gradle/src/main/groovy/com/asakusafw/m3bp/gradle/plugins/: AsakusafwM3bpPlugin.groovy  AsakusafwOrganizerM3bpExtension.groovy  package-info.java
gradle/src/templates/asakusa-m3-template/: build.gradle
integration/: README.md  build.gradle  settings.gradle
integration/src/integration-test/data/m3bp/: build.gradle
integration/src/integration-test/java/com/asakusafw/integration/m3bp/: M3bpTest.java  PortalTest.java  ToolsInfoTest.java  Util.java
(+206 files in other folders)
